@@ -13,6 +13,7 @@ bin_PROGRAMS = \
 	fakemultiVDIF \
 	extractSingleVDIFThread \
 	extractVDIFThreads \
+	filterVDIF \
 	countVDIFPackets \
 	printVDIF \
 	printVDIFgaps \
@@ -62,6 +63,12 @@ padVDIF_SOURCES = \
 
 extractSingleVDIFThread_SOURCES = \
 	extractSingleVDIFThread.c
+
+extractVDIFThreads_SOURCES = \
+	extractVDIFThreads.c
+
+filterVDIF_SOURCES = \
+	filterVDIF.c
 
 cleanVDIF_SOURCES = \
 	cleanVDIF.c
